--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.11.0",
     "csstype": "^3.1.3",
     "motion": "^12.23.12",
     "react": "^19.1.0",
