--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "main": "index.js",
   "scripts": {
     "start": "tsx ./src/index.ts",
+    "dev:server": "cd server && npm install && npm run dev",
+    "dev:client": "cd client && npm install && npm run dev",
     "build": "tsc",
     "test": "tsx --experimental-test-coverage --test src/tests/**/*.ts"
   },
