--- a/server/package.json
+++ b/server/package.json
@@ -1,16 +1,20 @@
 {
-  "name": "server",
+  "name": "wordle-server",
   "version": "1.0.0",
-  "description": "",
+  "description": "testing server",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon --watch './src/**/*.ts' --exec 'tsx' ./src/index.ts",
+    "start": "node ./dist/index.js",
+    "build": "tsc",
+    "dev": "nodemon --watch './src/**/*.ts' --exec 'tsx' ./src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+  },
+  "dependencies": {
     "@types/cors": "^2.8.19",
     "@types/dotenv": "^6.1.1",
     "@types/express": "^5.0.3",
@@ -18,12 +22,12 @@
     "@types/node": "^24.1.0",
     "nodemon": "^3.1.10",
     "tsx": "^4.20.3",
-    "typescript": "^5.9.2"
-  },
-  "dependencies": {
+    "typescript": "^5.9.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
-    "express-session": "^1.18.2"
+    "express-session": "^1.18.2",
+    "helmet": "^8.1.0",
+    "pino-http": "^10.5.0"
   }
 }
