--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "include": ["./src/**/*.ts"],
+  "include": ["server/src/**/*.ts"],
   "compilerOptions": {
     "target": "es2020",
     "module": "commonjs",
