--- a/client/package.json
+++ b/client/package.json
@@ -11,11 +11,9 @@
   },
   "dependencies": {
     "axios": "^1.11.0",
-    "csstype": "^3.1.3",
     "motion": "^12.23.12",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-hot-toast": "^2.5.2"
+    "react-dom": "^19.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
