--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,8 @@
   "description": "testing server",
   "main": "index.js",
   "scripts": {
-    "start": "node ./dist/index.js",
-    "build": "tsc",
+    "start": "node ./dist/server/src/index.js",
+    "build": "tsc && tsc-alias",
     "dev": "nodemon --watch './src/**/*.ts' --exec 'tsx' ./src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "tsc-alias": "^1.8.16"
   },
   "dependencies": {
     "@types/cors": "^2.8.19",
@@ -20,14 +21,14 @@
     "@types/express": "^5.0.3",
     "@types/express-session": "^1.18.2",
     "@types/node": "^24.1.0",
-    "nodemon": "^3.1.10",
-    "tsx": "^4.20.3",
-    "typescript": "^5.9.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "express-session": "^1.18.2",
     "helmet": "^8.1.0",
-    "pino-http": "^10.5.0"
+    "nodemon": "^3.1.10",
+    "pino-http": "^10.5.0",
+    "tsx": "^4.20.3",
+    "typescript": "^5.9.2"
   }
 }
