--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "include": ["./src/**/*.ts"],
   "compilerOptions": {
+    "baseUrl": ".",
     "target": "es2016",
     "module": "commonjs",
     "paths": {
