--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/ms": "^2.1.0",
     "tsc-alias": "^1.8.16"
   },
   "dependencies": {
@@ -26,6 +27,7 @@
     "express": "^5.1.0",
     "express-session": "^1.18.2",
     "helmet": "^8.1.0",
+    "ms": "^2.1.3",
     "nodemon": "^3.1.10",
     "pino-http": "^10.5.0",
     "tsx": "^4.20.3",
